[gd_scene load_steps=14 format=3 uid="uid://b2ahykk0dhu42"]

[ext_resource type="Script" uid="uid://chltkd1hm5ujm" path="res://Scenes/MainScenes/game_scene_1.gd" id="1_3k5ul"]
[ext_resource type="PackedScene" uid="uid://bhjxr3a65rxai" path="res://map_2.tscn" id="1_nliq5"]
[ext_resource type="Script" uid="uid://c0vpdkqv5prqy" path="res://Scenes/MainScenes/ui.gd" id="2_3k5ul"]
[ext_resource type="Texture2D" uid="uid://brmw8ascv77en" path="res://Assets/UI/Buttons/Buttons.png" id="3_tbmxq"]
[ext_resource type="Texture2D" uid="uid://cxjv8iovwlh1w" path="res://Assets/Towers/Human-Worker-Cyan.png" id="4_caie0"]
[ext_resource type="LabelSettings" uid="uid://tiyan25aa4gb" path="res://Assets/Fonts/kf_40_01.tres" id="5_vp468"]
[ext_resource type="Texture2D" uid="uid://bnk4swmrwlmh7" path="res://Assets/Towers/Archer-Green-Right-Bow.png" id="6_2idfl"]
[ext_resource type="Texture2D" uid="uid://bwb0hjwvy6fll" path="res://Assets/Icons/right.png" id="7_3c1p7"]
[ext_resource type="Texture2D" uid="uid://cq7f2008nuycl" path="res://Assets/Icons/Pause1.png" id="8_l6vud"]
[ext_resource type="Texture2D" uid="uid://dxppvrdvy78vs" path="res://Assets/Icons/fastForward.png" id="9_vq0l7"]
[ext_resource type="Texture2D" uid="uid://dwr4n08rcygfl" path="res://Assets/Icons/home.png" id="10_oxown"]
[ext_resource type="Texture2D" uid="uid://ok4rh8i4j54u" path="res://Assets/Icons/next.png" id="11_tbmxq"]
[ext_resource type="Texture2D" uid="uid://3qhujhlrfumf" path="res://Assets/UI/HPbar.jpg" id="11_xidcs"]

[node name="GameScene1" type="Node2D"]
script = ExtResource("1_3k5ul")

[node name="Map2" parent="." instance=ExtResource("1_nliq5")]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2_3k5ul")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 583.0
offset_top = -350.0
offset_right = 633.0
offset_bottom = -238.0
grow_vertical = 0

[node name="hero_1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_button"]]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_tbmxq")
stretch_mode = 6

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/hero_1"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 26.0
offset_bottom = 26.0
texture = ExtResource("4_caie0")
expand_mode = 2
stretch_mode = 3

[node name="Label" type="Label" parent="UI/HUD/BuildBar"]
layout_mode = 2
text = "$ 25"
label_settings = ExtResource("5_vp468")
horizontal_alignment = 1
vertical_alignment = 1

[node name="hero_2" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_button"]]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_tbmxq")
stretch_mode = 6

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/hero_2"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 26.0
offset_bottom = 26.0
texture = ExtResource("6_2idfl")
expand_mode = 2
stretch_mode = 3

[node name="Label2" type="Label" parent="UI/HUD/BuildBar"]
layout_mode = 2
text = "$ 125"
label_settings = ExtResource("5_vp468")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameControl" type="HBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -255.0
offset_top = -100.0
offset_right = 53.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(200, 100)

[node name="PausePlay" type="TextureButton" parent="UI/HUD/GameControl"]
process_mode = 3
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("7_3c1p7")
texture_pressed = ExtResource("8_l6vud")
stretch_mode = 6

[node name="FastForward" type="TextureButton" parent="UI/HUD/GameControl"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("9_vq0l7")
stretch_mode = 0

[node name="TextureButton" type="TextureButton" parent="UI/HUD/GameControl"]
layout_mode = 2
texture_normal = ExtResource("11_tbmxq")

[node name="InfoBar" type="ColorRect" parent="UI"]
self_modulate = Color(0, 0, 0, 0.47058824)
custom_minimum_size = Vector2(450, 25)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -285.0
offset_right = 165.0
offset_bottom = 25.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="H" type="HBoxContainer" parent="UI/InfoBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Symbol" type="Label" parent="UI/InfoBar/H"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "$"
label_settings = ExtResource("5_vp468")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Money" type="Label" parent="UI/InfoBar/H"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "100"
label_settings = ExtResource("5_vp468")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="UI/InfoBar/H"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("10_oxown")
expand_mode = 2
stretch_mode = 5

[node name="HP" type="TextureProgressBar" parent="UI/InfoBar/H"]
custom_minimum_size = Vector2(150, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("11_xidcs")
texture_progress = ExtResource("11_xidcs")
tint_under = Color(0.26657522, 0.2665752, 0.2665752, 1)
tint_progress = Color(0.12941177, 0.80784315, 0.10980392, 1)

[node name="Control" type="Control" parent="UI/InfoBar/H"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[connection signal="pressed" from="UI/HUD/GameControl/PausePlay" to="UI" method="_on_pause_play_pressed"]
[connection signal="pressed" from="UI/HUD/GameControl/FastForward" to="UI" method="_on_fast_forward_pressed"]
[connection signal="pressed" from="UI/HUD/GameControl/TextureButton" to="." method="_on_texture_button_pressed"]
